# rekt-backend-api

./: .env.template  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
alembic/: README  env.py
alembic/versions/: 2023_02_16_1602-510eafba3782_initial_migration.py
app/: exceptions.py  main.py
app/internal/database/postgres/: pgsql_helper.py
app/internal/database/postgres/models/: assets_manager.py
app/internal/database/redis/: redis_helper.py
app/internal/database/s3/: s3_client.py
app/internal/helpers/components/: environment.py  logger.py
app/internal/modules/assets_manager/: pgsql_db.py  redis_db.py  storage_s3.py
app/routers/: assets_manager.py  server.py
app/routers/middleware/: authentication.py
app/tests/e2e/: conftest.py  server.py
docs/: commands.txt  notes.txt  setup.txt
